<?xml version="1.0"  encoding="utf-8" ?>

<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/cdl_activity_my_stocks"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">

  <android.support.v7.widget.Toolbar
      android:id="@+id/toolbar"
      android:minHeight="?attr/actionBarSize"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      app:titleTextColor="@android:color/white"
      android:background="?attr/colorPrimary">
  </android.support.v7.widget.Toolbar>

  <android.support.v7.widget.Toolbar
      android:id="@+id/toolbar_activity_my_stocks"
      android:layout_width="match_parent"
      android:layout_height="?attr/actionBarSize"
      app:layout_collapseMode="pin"
      app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />


  <RelativeLayout
      android:layout_marginTop="?attr/actionBarSize"
      android:layout_width="match_parent"
      android:layout_height="match_parent">

    <android.support.v7.widget.RecyclerView
        android:id="@+id/rv_activity_my_stocks"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:contentDescription="@string/list_stocks" />

    <TextView
        android:id="@+id/emptyView_acitivity_my_stocks"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/data_not_available"
        android:textSize="20sp"
        android:visibility="invisible" />

  </RelativeLayout>

  <android.support.design.widget.FloatingActionButton
      android:id="@+id/fab_activity_my_stocks"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_margin="@dimen/fab_margin"
      android:layout_gravity="bottom|end"
      android:contentDescription="@string/fab_button_content_description"
      android:clickable="true"
      android:src="@drawable/ic_add_white_24dp"
      app:backgroundTint="@color/material_blue_700"
      app:fabSize="normal"
      app:layout_behavior="com.aashish.stockhawk.ui.ScrollAwareFABBehavior" />


</android.support.design.widget.CoordinatorLayout>